// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RuleTabsSelect/> should render 1`] = `
<nav
  class="navbar navbar"
>
  <ul
    class="item nav"
  >
    My rules
  </ul>
  <ul
    class="item nav"
  >
    Rule library
  </ul>
</nav>
`;

exports[`<RuleTabsSelect/> should render warning when a new rule was installed 1`] = `
<nav
  class="navbar navbar"
>
  <ul
    class="item newRules nav"
  >
    My rules
  </ul>
  <ul
    class="item nav"
  >
    Rule library
  </ul>
</nav>
`;
